--- a/package.json
+++ b/package.json
@@ -4,17 +4,21 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon -x npm run serve",
+    "serve": "node index"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@types/node": "^13.9.3"
+    "@types/node": "^13.9.3",
+    "nodemon": "^2.0.6"
   },
   "dependencies": {
     "express": "^4.17.1",
     "mockjs": "^1.1.0",
+    "moment": "^2.29.1",
     "mysql2": "^2.1.0",
-    "sequelize": "^5.21.5"
+    "sequelize": "^5.21.5",
+    "validate.js": "^0.13.1"
   }
 }
