--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "nodemon": "^2.0.6"
   },
   "dependencies": {
+    "connect-history-api-fallback": "^1.6.0",
     "express": "^4.17.1",
     "mockjs": "^1.1.0",
     "moment": "^2.29.1",
