--- a/package.json
+++ b/package.json
@@ -15,10 +15,15 @@
   },
   "dependencies": {
     "connect-history-api-fallback": "^1.6.0",
+    "cookie-parser": "^1.4.5",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
+    "express-session": "^1.17.1",
+    "jsonwebtoken": "^8.5.1",
     "mockjs": "^1.1.0",
     "moment": "^2.29.1",
     "mysql2": "^2.1.0",
+    "path-to-regexp": "^6.2.0",
     "sequelize": "^5.21.5",
     "validate.js": "^0.13.1"
   }
