--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "jsonwebtoken": "^8.5.1",
     "mockjs": "^1.1.0",
     "moment": "^2.29.1",
+    "multer": "^1.4.2",
     "mysql2": "^2.1.0",
     "path-to-regexp": "^6.2.0",
     "sequelize": "^5.21.5",
