--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,8 @@
     "axios": "^0.21.0",
     "core-js": "^3.6.5",
     "element-ui": "^2.15.0",
+    "github-markdown-css": "^4.0.0",
+    "highlight.js": "^10.1.2",
     "marked": "^1.2.7",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
@@ -28,6 +30,7 @@
     "style-loader": "^1.2.1",
     "vue-loader": "^15.9.3",
     "vue-template-compiler": "^2.6.12",
-    "webpack": "^4.44.2"
+    "webpack": "^4.44.2",
+    "webpack-dev-server": "^3.11.2"
   }
 }
